# Logismart_parasas

./: CMakeLists.txt  License.rtf  LogismartInstaller.msi  LogismartInstaller.wixpdb  README.md  installer.wixobj  installer.wxs  main.cpp  parasai.cpp
